--- a/zuoye.html
+++ b/zuoye.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>hcy</title>
+	<title>华晨宇</title>
 	<style>
 		*{
 			padding: 0;
@@ -140,7 +140,7 @@
 			height: 50px;
 			text-align: center;
 			cursor: pointer;
-			color:  ;
+			/* color:  ; */
 			top: 275px;
 		    line-height: 50px;
 		    background: rgb(255,0,0);
@@ -205,15 +205,16 @@
 			text-decoration: underline;
 		}
 		#div4{
-			background: url(hcy5.jpg);
-			width: 1500px;
+			background: url(hhimg/hcy5.jpg);
+			width: 1475px;
+
 		}
 	    .red{
 	     background-color:red;
-	     width:1500px;
+	     width:1480px;
 	     height:50px;
 	     position:relative;
-	     left:-1500px;
+	     left:-1480px;
 	     top:0px;
 	    }
 	    .blue{
@@ -221,7 +222,7 @@
 	     width:100px;
 	     height:40px;
 	     position:absolute;
-	     left:1500px;
+	     left:1480px;
 	     top:2px;
 	    }
        .dai{
@@ -257,21 +258,64 @@
        	margin-left: 80px;
        	margin-right: 60px;
        }
+       .last-wrap{
+			height:200px;
+			background-color: pink;
+		}
+		.last{
+			width:1450px;
+			margin: 0 auto;
+		}
+		.last ul{
+			height: 40px;
+			margin-left:300px ;
+		}
+		.last ul li{
+			float: left;
+			margin-top: 50px;
+			list-style: none;
+			margin-left: 10px;
+		}
+		.last li a{
+			font-size: 14px;
+			color: #ffffff;
+		}
+		.last li span{
+			font-size: 14px;
+			color: #ffffff;
+			padding: 0 10px;
+		}
+		.last p{
+			text-align: center;
+			font-size: 14px;
+			color: #ffffff;
+			margin-top: 60px ;
+		} 
+		.hhh{
+			float: right;
+			margin-right: -135px;
+			margin-top: -72px;
+			
+		}
+		.button{
+			width: 100px;
+			height: 40px;
+		}
 	</style>
 	
 </head>
-<body>
+<body >
 	<ul class="fix">
 		<li onclick="goTo('#div1')">人物介绍</li>
 		<li onclick="goTo('#div2')">最新图片</li>
 		<li onclick="goTo('#div3')">最新动态</li>
 		<li onclick="goTo('#div4')">代表作品</li>
 	</ul>
-	<div style="background:url(background.png)">
+	<div style="background:url(hhimg/background.png)">
 	<div class="div" id="div1">
       <div class="nav1">
-		<img src="hcy2.jpg" style="width:250px;margin-left: 50px;margin-top: 25px">
-		<img src="hcy3.jpg" style="width:250px;margin-bottom:-145px;margin-left:20px">
+		<img src="hhimg/hcy2.jpg" style="width:250px;margin-left: 50px;margin-top: 25px">
+		<img src="hhimg/hcy3.jpg" style="width:250px;margin-bottom:-145px;margin-left:20px">
 		<a href="https://baike.baidu.com/item/%E5%8D%8E%E6%99%A8%E5%AE%87/6064097?fr=aladdin"><p class="aa">华晨宇</p></a>
 		<p class="bb">华语乐坛领军唱作人</p>
 		<p class="standard">代表作品</p>
@@ -300,18 +344,18 @@
 	<div class="div" id="div2">
 		<div class="box" id="box">
 		<div class="slider" id=slider>
-			<div class="slide"><img src="55.jpg" alt=" "></div>
-            <div class="slide"><img src="11.jpg" alt=" ">
+			<div class="slide"><img src="hhimg/55.jpg" alt=" "></div>
+            <div class="slide"><img src="hhimg/11.jpg" alt=" ">
             </div>
-            <div class="slide"><img src="22.jpg" alt=" ">
+            <div class="slide"><img src="hhimg/22.jpg" alt=" ">
             </div>
-            <div class="slide"><img src="33.jpg" alt=" ">
+            <div class="slide"><img src="hhimg/33.jpg" alt=" ">
             </div>
-            <div class="slide"><img src="44.jpg" alt=" ">
+            <div class="slide"><img src="hhimg/44.jpg" alt=" ">
             </div>
-            <div class="slide"><img src="55.jpg" alt=" ">
+            <div class="slide"><img src="hhimg/55.jpg" alt=" ">
             </div>
-            <div class="slide"><img src="11.jpg" alt=" ">
+            <div class="slide"><img src="hhimg/11.jpg" alt=" ">
             </div>
 		</div>
 		<span id="left"></span>
@@ -329,7 +373,7 @@
 		<div class="title">
 			<p class="t">关于华晨宇的最近行程~</p>
 		</div>
-		<img src="hcy4.jpg" style="width:300px;margin-top:30px;float:right;margin-right:-100px">
+		<img src="hhimg/hcy4.jpg" style="width:300px;margin-top:30px;float:right;margin-right:-100px">
 		<div class="aa">
 
 		<a href="http://baijiahao.baidu.com/s?id=1653626631481513282&wfr=spider&for=pc">Ⅰ华晨宇：新歌《好想爱这个世界啊》发行仅19天销量破千万
@@ -337,6 +381,7 @@
 
 		<a href="https://idol001.com/xingcheng/detail/summary/star-huachenyu-6652/5def0fdaf660468f2d8b456f/">Ⅱ 华晨宇确定于12月31日参加湖南卫视跨年演唱会</a>
 		<a href="http://baijiahao.baidu.com/s?id=1650317406755746979&wfr=spider&for=pc">Ⅲ 华晨宇在11月15日11月16日11月17日在海口连开三场演唱会</a>
+		<input type="button" id="button" class="button"value="华晨宇" onclick="TAN()" style="margin-top: 300px;margin-left: 250px">
 	</div>
 	</div>
 	<div class="div" id="div4" style="margin:0px;padding:0px">
@@ -344,10 +389,10 @@
 	  	<p class="biao">《卡西莫多的礼物》《我管你》《孩子》《异类》《神树》《疯人院》《烟火里的尘埃》《好想爱这个世界啊》等</p>
 	  	<div class="blue" id="cf" ><p class="dai">代表作品</p></div>
       </div>
-      <img src="66.jpg" style="width:330px;margin-left:320px;margin-top:-200px;">
-      <img src="一专.png" style="width:200px;float:left;margin-left:150px;margin-top:-100px">
-      <img src="二专.png" style="width:200px;float:left;margin-left:150px;margin-top:-100px">
-      <img src="三专.png" style="width:200px;margin-top:100px;margin-left:-1080px">
+      <img src="hhimg/66.jpg" style="width:330px;margin-left:320px;margin-top:-200px;">
+      <img src="hhimg/一专.png" style="width:200px;float:left;margin-left:150px;margin-top:-100px">
+      <img src="hhimg/二专.png" style="width:200px;float:left;margin-left:150px;margin-top:-100px">
+      <img src="hhimg/三专.png" style="width:200px;margin-top:100px;margin-left:-1080px">
       <div class="zhuanji">
       <p class="hcy">华晨宇出道至今，共发行了三张实体专。一专《卡西莫多的礼物》二专《异类》和三专《H》</p>
       <p class="hcy">《一专》包括的歌曲有《烟火里的尘埃》《环游》《卡西莫多的礼物》等10首歌</p>
@@ -359,11 +404,29 @@
       <a href="https://www.xiami.com/album/1208109631">卡西莫多的礼物</a>
      </div>
   </div>
-  </p>
 	</div>
+	<div class="last-wrap">
+		<div class="last">
+			<ul>
+				<li><a href="#">帮助</a><span>|</span></li>
+				<li><a href="#">用户协议</a><span>|</span></li>
+				<li><a href="#">隐私声明</a><span>|</span></li>
+				<li><a href="#">常见问题</a><span>|</span></li>
+				<li><a href="#">合作伙伴</a><span>|</span></li>
+				<li><a href="#">关联账号</a><span>|</span></li>
+				<div class="hhh">
+				<li><a href="#">关于我们</a><span>|</span></li>
+				<li><a href="#">法律服务</a><span>|</span></li>
+			 	</div>
+			</ul>
+			<p style="margin-left:450px">  2019-2020  追易  版权所有</p>
+		</div>
 	</div>
 </body>
 <script>
+	function TAN(){
+           alert("您正在看华晨宇最近行程~");
+	}
 	function goTo(s){
 		location.hash = s; 
 	}
@@ -522,7 +585,7 @@
     }
     aonDiv.onmouseout=function(){
       clearInterval(atimer);
-      startMove(-1500);
+      startMove(-1480);
     }
     function startMove(target){
           atimer=setInterval(function(){
